# cookiecutter-python-data

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.slug}}/: .gitignore  README.rst  fabfile.py  pyproject.toml  setup.py  tox.ini
{{cookiecutter.slug}}/data/: readme.rst
{{cookiecutter.slug}}/src/{{cookiecutter.slug}}/: __init__.py
{{cookiecutter.slug}}/{{cookiecutter.slug}}/: __init__.py
